--- a/portafolio/templates/base.html
+++ b/portafolio/templates/base.html
@@ -5,6 +5,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Portafolio de Andrés Bateca. Encuentra aquí mis proyectos y habilidades en desarrollo web."
+    />
+
     <title>{% block title %}base{% endblock %}</title>
     <link
       rel="stylesheet"
