se agregron cambios en los titulos y foto de perfil

--- a/portafolio/home/templates/home.html
+++ b/portafolio/home/templates/home.html
@@ -2,7 +2,7 @@
 {% block content %}
 <!-- Contenido  de app proyectos -->
 <header class="bg-secondary text-white text-center py-5">
-  <h1>Andres Ricardo Bateca Jaimes</h1>
+  <h1>Desarrollador web, Andres Bateca</h1>
   <p class="parrafo-descripcion w-75 text-center mx-auto">
     Desarrollador Full Stack Junior de Colombia autodidacta en programación.
     Tecnólogo en telecomunicaciones y actualmente en el octavo semestre de
@@ -13,10 +13,10 @@
 
   <div class="d-flex justify-content-center">
     <img
-      src="{% static '../media/portafolio/images/perfil.jpg' %}"
+      src="{% static '../media/portafolio/images/mifoto.jpg' %}"
       alt="Mi Foto"
       class="rounded-circle d-none d-sm-block"
-      width="300"
+      width="250"
     />
   </div>
 </header>
