--- a/portafolio/templates/base.html
+++ b/portafolio/templates/base.html
@@ -2,114 +2,74 @@
 
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="Portafolio de Andrés Bateca. Encuentra aquí mis proyectos y habilidades en desarrollo web."
-    />
 
-    <title>{% block title %}base{% endblock %}</title>
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="{% static 'css/common_style.css' %}"
-    />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
-      crossorigin="anonymous"
-    />
-    <link
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-      rel="stylesheet"
-    />
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description"
+    content="Portafolio de Andrés Bateca. Encuentra aquí mis proyectos y habilidades en desarrollo web." />
 
-  <body>
-    <div>
-      <div class="navbar-full bg-dark text-white d-flex justify-content-center">
-        <nav class="navbar navbar-expand-sm">
-          <div class="container text-center align-items-center">
-            <div>
-              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li
-                  class="nav-item {% if request.resolver_match.view_name == 'home' %}active{% endif %}"
-                >
-                  <a
-                    class="nav-link navbar-text-white"
-                    aria-current="page"
-                    href="{% url 'home' %}"
-                    >Home</a
-                  >
-                </li>
-                <li
-                  class="nav-item {% if request.resolver_match.view_name == 'lista_proyectos' %}active{% endif %}"
-                >
-                  <a
-                    class="nav-link navbar-text-white"
-                    href="{% url 'lista_proyectos' %}"
-                    >Proyectos</a
-                  >
-                </li>
-                <li
-                  class="nav-item {% if request.resolver_match.view_name == 'contacto' %}active{% endif %}"
-                >
-                  <a
-                    class="nav-link navbar-text-white"
-                    href="{% url 'contacto' %}"
-                    >Contacto</a
-                  >
-                </li>
-              </ul>
-            </div>
+  <title>{% block title %}base{% endblock %}</title>
+  <link rel="stylesheet" type="text/css" href="{% static 'css/common_style.css' %}" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous" />
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
+  <link rel="shortcut icon" href="{% static 'favicon.ico' %}" type="image/x-icon">
+</head>
+
+<body>
+  <div>
+    <div class="navbar-full bg-dark text-white d-flex justify-content-center">
+      <nav class="navbar navbar-expand-sm">
+        <div class="container text-center align-items-center">
+          <div>
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item {% if request.resolver_match.view_name == 'home' %}active{% endif %}">
+                <a class="nav-link navbar-text-white" aria-current="page" href="{% url 'home' %}">Home</a>
+              </li>
+              <li class="nav-item {% if request.resolver_match.view_name == 'lista_proyectos' %}active{% endif %}">
+                <a class="nav-link navbar-text-white" href="{% url 'lista_proyectos' %}">Proyectos</a>
+              </li>
+              <li class="nav-item {% if request.resolver_match.view_name == 'contacto' %}active{% endif %}">
+                <a class="nav-link navbar-text-white" href="{% url 'contacto' %}">Contacto</a>
+              </li>
+            </ul>
           </div>
-        </nav>
-      </div>
-    </div>
-
-    {% block content %} {% endblock %}
-
-    <div class="card text-center text-bg-dark">
-      <div class="card-header">¡Gracias por visitar mi sitio!</div>
-      <div class="card-body">
-        <h5 class="card-title">Andrés Ricardo Bateca Jaimes</h5>
-        <p class="card-text">
-          Desarrollador Full Stack Junior | Tecnólogo en Telecomunicaciones |
-          Estudiante de Ingeniería en Telecomunicaciones
-        </p>
-
-        <div class="social-links">
-          <!-- Agrega aquí tus enlaces a redes sociales, como LinkedIn, GitHub, etc. -->
-          <a
-            href="https://www.linkedin.com/in/andres-bateca-5301b3274/"
-            class="btn btn-primary"
-            target="_blank"
-          >
-            <i class="fab fa-linkedin"></i> LinkedIn
-          </a>
-          <!-- Enlace de GitHub con icono -->
-          <a
-            href="https://github.com/andres9119"
-            class="btn btn-primary"
-            target="_blank"
-          >
-            <i class="fab fa-github"></i> GitHub
-          </a>
         </div>
-      </div>
-      <div class="card-footer text-white">
-        © {{ year }} Todos los derechos reservados | Sitio web desarrollado con
-        Django y Bootstrap
+      </nav>
+    </div>
+  </div>
+
+  {% block content %} {% endblock %}
+
+  <div class="card text-center text-bg-dark">
+    <div class="card-header">¡Gracias por visitar mi sitio!</div>
+    <div class="card-body">
+      <h5 class="card-title">Andrés Ricardo Bateca Jaimes | desarrollador Django</h5>
+      <p class="card-text">
+        Desarrollador Full Stack Junior | Tecnólogo en Telecomunicaciones |
+        Estudiante de Ingeniería en Telecomunicaciones
+      </p>
+
+      <div class="social-links">
+        <!-- Agrega aquí tus enlaces a redes sociales, como LinkedIn, GitHub, etc. -->
+        <a href="https://www.linkedin.com/in/andres-bateca-5301b3274/" class="btn btn-primary" target="_blank">
+          <i class="fab fa-linkedin"></i> LinkedIn
+        </a>
+        <!-- Enlace de GitHub con icono -->
+        <a href="https://github.com/andres9119" class="btn btn-primary" target="_blank">
+          <i class="fab fa-github"></i> GitHub
+        </a>
       </div>
     </div>
-  </body>
+    <div class="card-footer text-white">
+      © {{ year }} Todos los derechos reservados | Sitio web desarrollado con
+      Django y Bootstrap
+    </div>
+  </div>
+</body>
 
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-    crossorigin="anonymous"
-  ></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+
 </html>
